2580 [Update]               changed backup to be disabled by default
2579 [Update]               improved handling of packages which require a restart
                            merged several MeGUI dlls into one package
2578 [Main]                 a second instance of the same executable is blocked
                            if file permissions are not available MeGUI will not start
2577 [Update]               improved handling of 7z archives which include files which need a restart
2576 [Update]               switched the updater to .NET 4.0
2575 [HD Streams Extractor] + [MediaInfo] missing language information in a video track will be ignored
2574 [Log]                  added .NET 4.6 detection support
2573 [Update]               sort date columns by date instead of string. Bug #810
2572 [HD Streams Extractor] + [MediaInfo] if a language cannot be detected/matched the default MeGUI language will be used
2571 [HD Streams Extractor] fixed some extract options (regression of 2564)
2570 [HD Streams Extractor] improved language & name detection
2569                        improved internal language handling
2568 [Muxer]                removed FFmpeg Muxer from the muxer menu (regression of 2546)
2567 [Log]                  added Windows 10 support
2566                        added ~300 additional languages to select based upon ISO 639-2. Feature requests #551/#553
2565 [XviD Encoder]         changed the default -kboost value to 10 (regression of 2547)
2564 [HD Streams Extractor] improves handling of TrueHD streams including Atmos support. Patch by bowlingbeeg #69
2563 [Job]                  fixed cancelling the warning when using "HIGH" priority. Bug #806
2562 [MP4 Muxer]            switched to ISO 639-2 three letter code for the language (regression of recent MP4box builds)
2561 [AVI Muxer]            improved logging
2560 [FFmpeg Muxer]         force source frame rate (regression of 2546)